Spring AI + Angular: Chat Client com Azure OpenAI

--- a/api-ai/src/main/resources/application.properties
+++ b/api-ai/src/main/resources/application.properties
@@ -1,2 +1,13 @@
 spring.application.name=api-ai
-spring.ai.openai.api-key=
+
+## OPEN AI
+#spring.ai.openai.api-key=
+
+## VERTEX AI GEMINI
+#spring.ai.vertex.ai.gemini.project-id=
+#spring.ai.vertex.ai.gemini.location=
+
+## AZURE OPEN AI
+spring.ai.azure.openai.api-key=
+spring.ai.azure.openai.endpoint=
+spring.ai.azure.openai.chat.options.deployment-name=
