Spring AI + Angular: Persistindo Conversas do Chat no MySQL (Chat com Memória)

--- a/api-ai/src/main/resources/application.properties
+++ b/api-ai/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.application.name=api-ai
 spring.ai.azure.openai.api-key=
 spring.ai.azure.openai.endpoint=
 spring.ai.azure.openai.chat.options.deployment-name=
+
+spring.ai.chat.memory.repository.jdbc.initialize-schema=never
