--- a/api-ai/pom.xml
+++ b/api-ai/pom.xml
@@ -46,6 +46,12 @@
 <!--		</dependency>-->
 
 		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.ai</groupId>
 			<artifactId>spring-ai-starter-model-azure-openai</artifactId>
 		</dependency>
