--- a/api-ai/src/main/resources/application.properties
+++ b/api-ai/src/main/resources/application.properties
@@ -13,3 +13,8 @@ spring.ai.azure.openai.endpoint=
 spring.ai.azure.openai.chat.options.deployment-name=
 
 spring.ai.chat.memory.repository.jdbc.initialize-schema=never
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/mydatabase
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
